testsuite/escript/errors/errors012-string-backslash-newline.err1
String literal contains a newline.